--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,54 +1,88 @@
-<%= render "devise/shared/alerts" %>
-
 <div class="login">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= devise_error_messages! %>
+  <%= link_to(:back) do %>
+    <div class="mainlogo signuplogoedit"></div>
+  <% end %>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
     <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true %>
+      <%= f.email_field :email, placeholder: if (resource.errors[:email]).blank? then "e-mail" else ("e-mail " + resource.errors[:email][0].to_s) end, autofocus: true %>
     </div>
 
     <div class="field">
-      <%= f.label :first_name %><br />
-      <%= f.text_field :firstname %>
+        <%= f.text_field :firstname, placeholder: if (resource.errors[:firstname]).blank? then "first name" else ("first name " + resource.errors[:firstname][0].to_s) end %><span class="help-inline"></span>
     </div>
 
     <div class="field">
-      <%= f.label :last_name %><br />
-      <%= f.text_field :lastname %>
+      <%= f.text_field :lastname, placeholder: if (resource.errors[:lastname]).blank? then "last name" else ("last name " + resource.errors[:lastname][0].to_s) end %>
     </div>
-
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
     <div class="field">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "off" %>
+      <div class="editnotification"><i>(leave blank if you don't want to change it)</i></div>
+      <%= f.password_field :password, placeholder: if (resource.errors[:password]).blank? then "password" else ("password " + resource.errors[:password][0].to_s) end, autocomplete: "off" %>
     </div>
 
     <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      <%= f.password_field :password_confirmation, placeholder: if (resource.errors[:password_confirmation]).blank? then "password confirmation" else (resource.errors[:password_confirmation][0].to_s) end, autocomplete: "off" %>
     </div>
 
     <div class="field">
-      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password, autocomplete: "off" %>
+      <div class="editnotification"><i>(we need your current password to confirm your changes)</i></div>
+      <%= f.password_field :current_password,placeholder: if (resource.errors[:current_password]).blank? then "current password" else (resource.errors[:current_password][0].to_s) end, autocomplete: "off" %>
+    </div>
+
+
+    <div class="cancelaccount">
+      <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Update" %>
+      <%= f.submit "UPDATE" %>
     </div>
+<!--    <div class="signuplogin">
+      <%- if controller_name != 'sessions' %>
+        <%= link_to "Log in", new_session_path(resource_name) %><br />
+      <% end -%>
+    </div>   -->
   <% end %>
+<%= if (!(resource.errors[:email]).blank?) then end %> 
 
-  <h3>Cancel my account</h3>
+  <script>
+    
+    var emailElement = document.getElementById("user_email");
+    var firstnameElement = document.getElementById("user_firstname");
+    var lastnameElement = document.getElementById("user_lastname")
+    var passwordElement = document.getElementById("user_password")
+    var password_confirmationElement = document.getElementById("user_password_confirmation")
 
-  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+    emailElement.oninput = function(){ 
+      emailElement.placeholder = "";
+      emailElement.parentElement.className = "";
+    };
+    firstnameElement.oninput = function(){ 
+      firstnameElement.placeholder = "";
+      firstnameElement.parentElement.className = "";
+    };
+    lastnameElement.oninput = function(){ 
+      lastnameElement.placeholder = ""; 
+      lastnameElement.parentElement.className = "";
+    };
+    passwordElement.oninput = function(){ 
+      passwordElement.placeholder = ""; 
+      passwordElement.parentElement.className = "";
+    };
+    password_confirmationElement.oninput = function(){ 
+      password_confirmationElement.placeholder = ""; 
+      password_confirmationElement.parentElement.className = "";
+    };
 
-  <%= link_to "Back", :back %>
+  </script>
 </div>
+
+
+
