--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -103,7 +103,7 @@
     font-size: 1.2em;
 }
 
-.dropdown-nav li:hover, #dropdownprofile a:hover {
+.dropdown-nav li:hover, #dropdownprofile a:hover, , #dropdownhome a:hover {
     color: #D9D9D9;
 }
 
@@ -130,7 +130,7 @@
     margin-top: 3vh;
 }
 
-.dropdown-signout a, #dropdown-tracking a, #dropdownprofile a {
+.dropdown-signout a, #dropdown-tracking a, #dropdownprofile a, #dropdownhome a {
     text-decoration: none;
     color: white;
 }
@@ -175,5 +175,15 @@
     border-radius: 100%;
 }
 
+.signuplogoedit {
+    background-position-y: 4vh;
+    height: 17vh;
+}
 
 
+@media (min-width:720px) {
+    .signuplogoedit {
+        background-position-y: 2vh;
+        height: 25vh;
+    }
+}
