--- a/app/assets/stylesheets/locationstyle.css
+++ b/app/assets/stylesheets/locationstyle.css
@@ -1,10 +1,10 @@
 .main {
 	display: block;
 	position: absolute;
-	border: 1px solid black;
+	border: 0px solid black;
 	border-radius: 0px;
-	height: 92%;
-	width: 95%;
+	height: 90vh;
+	width: 100vw;
 }
 
 .title {
@@ -12,6 +12,11 @@
 	font-size: 2em;
 	padding-left: 0%;
 	text-align: center;
+}
+
+.submap {
+		background-color: #c52b25;
+		height: 100%;
 }
 
 
@@ -42,11 +47,19 @@
 
 .yourlocation {
 	border: 0px solid red;
-	height: 87%;
+	height: 100%;
 }
 
 .tracking {
 	padding-left: 3%;
+}
+
+#trackingtoggleon, #trackingtoggleoff {
+	display: none;
+}
+
+#trackingtoggleon {
+	margin-bottom: 1px;
 }
 
 .signout {
@@ -58,11 +71,13 @@
 
 .userid {
 	text-align: center;
-	padding-bottom: 2%;
+	padding-top: 3vh;
+	color: white;
+	font-size: 1.2em;
 }
 
 #map {
-	height: 80%;
+	height: 70vh;
 }
 
 .alert-box {
@@ -70,7 +85,6 @@
     border-radius:10px;
     font-family:Tahoma,Geneva,Arial,sans-serif;font-size:11px;
     padding:2.5px 0px 4px 0px;
-    margin-top:3%;
 }
 
 .loginalert-box {
@@ -118,7 +132,8 @@
 
 .status {
 	text-align: center;
-	margin-top: 10px;
+	height: 5vh;
+	padding-top: 3vh;
 }
 
 .loading {
