--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -71,6 +71,7 @@
     display: none;
     float: right;
     position: relative;
+    margin-top: -1px;
     z-index: 10;
     background-color: rgba(197, 43, 37, 0.75);
     width: 43vw;
