--- a/app/assets/stylesheets/locationstyle.css
+++ b/app/assets/stylesheets/locationstyle.css
@@ -16,7 +16,7 @@
 
 .submap {
 		background-color: #c52b25;
-		height: 100%;
+		height: 30vh
 }
 
 
@@ -77,7 +77,7 @@
 }
 
 #map {
-	height: 70vh;
+	height: 60vh;
 }
 
 .alert-box {
