remove invite,remove,leave from profile dropdown

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -50,6 +50,13 @@
   </div>
 
   <script>
+
+    document.getElementById("dropdowninvite").style.display = "none";
+    document.getElementById("dropdownremove").style.display = "none";
+    document.getElementById("dropdownleave").style.display = "none";
+    document.getElementById("dropdownprofile").style.display = "none";
+    
+    
     
     var emailElement = document.getElementById("user_email");
     var firstnameElement = document.getElementById("user_firstname");
