--- a/app/views/devise/shared/_navbar.html.erb
+++ b/app/views/devise/shared/_navbar.html.erb
@@ -37,7 +37,7 @@
 		</div>
 		<div class="dropdown-signout" id="dropdown-signout">
 			<% if user_signed_in? %>
-				<%= link_to("Sign Out", destroy_user_session_path, method: :delete) %>
+				<%= link_to("Sign Out", destroy_user_session_path, method: :delete, data: {confirm: "Are you sure you want to sign out?"}) %>
 				<% else %>
 				<%= link_to("Sign In", user_session_path) %>
 			<% end %>
