--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,6 +6,25 @@
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
+    <div id="upload-demo"></div>
+
+    <input type="file" id="upload" value="Choose a file" accept="image/*">
+
+    <script>
+      $uploadCrop = $('#upload-demo').croppie({
+          enableExif: true,
+          viewport: {
+              width: 200,
+              height: 200,
+              type: 'circle'
+          },
+          boundary: {
+              width: 300,
+              height: 300
+          }
+      });
+    </script>
+
       <div class="field">
         <%= f.email_field :email, placeholder: if (resource.errors[:email]).blank? then "e-mail" else ("e-mail " + resource.errors[:email][0].to_s) end, autofocus: true %>
       </div>
