--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,84 @@
 <%= render "devise/shared/navbar" %>
 
-<div class="login main">
+    <div class="login main">
 
-  <div class="editprofile">
+      <div class="editprofile">
+        <input type="file" id="upload" value="Choose a file" accept="image/*">
+        <button class="upload-result">Result</button>
+        <div id="upload-demo">
+        </div>
+        <div id="result"><%= image_tag '/' + current_user.id.to_s + '.png' %></div>
+
+        <script>
+
+            function demoUpload() {
+              var $uploadCrop;
+
+              function readFile(input) {
+                if (input.files && input.files[0]) {
+                        var reader = new FileReader();
+                        
+                        reader.onload = function (e) {
+                    $('.upload-demo').addClass('ready');
+                          $uploadCrop.croppie('bind', {
+                            url: e.target.result
+                          }).then(function(){
+                            console.log('jQuery bind complete');
+                          });
+                          
+                        }
+                        
+                        reader.readAsDataURL(input.files[0]);
+                    }
+                    else {
+                      swal("Sorry - you're browser doesn't support the FileReader API");
+                  }
+              }
+
+              $uploadCrop = $('#upload-demo').croppie({
+                viewport: {
+                  width: 100,
+                  height: 100,
+                  type: 'circle'
+                },
+                boundary: {
+                  width: 300,
+                  height: 300
+                },
+                enableExif: true
+              });
+
+              $('#upload').on('change', function () { readFile(this); });
+              $('.upload-result').on('click', function (ev) {
+                $uploadCrop.croppie('result', {
+                  type: 'canvas',
+                  size: 'viewport'
+                }).then(function (resp) {
+                  data = { savepicture: resp.split(',')[1] }
+                  // console.log(JSON.stringify(resp).length);
+                  console.log(data);
+                  document.getElementById('result').innerHTML = "<img src=\"" + resp + "\">";
+                  $.ajax({          
+                    data: data,
+                    url: "/savepicture",
+                    type: "PATCH",
+                    dataType: "json"
+                  });
+                  window.location.href = "/users/edit"
+                });
+              });
+            }
+
+        </script>
+
+        <script>
+          demoUpload();
+        </script>
+      </div>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-    <div id="upload-demo"></div>
-
-    <input type="file" id="upload" value="Choose a file" accept="image/*">
-
-    <script>
-      $uploadCrop = $('#upload-demo').croppie({
-          enableExif: true,
-          viewport: {
-              width: 200,
-              height: 200,
-              type: 'circle'
-          },
-          boundary: {
-              width: 300,
-              height: 300
-          }
-      });
-    </script>
+   
 
       <div class="field">
         <%= f.email_field :email, placeholder: if (resource.errors[:email]).blank? then "e-mail" else ("e-mail " + resource.errors[:email][0].to_s) end, autofocus: true %>
