trying to make heroku croppie work, put croppie above jquery

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
         <button class="upload-result">Result</button>
         <div id="upload-demo">
         </div>
-        <div id="result"><%= image_tag '/' + current_user.id.to_s + '.png' %></div>
+        <div id="result"></div>
 
         <script>
 
