messing with application.js

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
                         reader.readAsDataURL(input.files[0]);
                     }
                     else {
-                      swal("Sorry - you're browser doesn't support the FileReader API");
+                      console.log("Sorry - you're browser doesn't support the FileReader API");
                   }
               }
 
