--- a/app/views/devise/shared/_navbar.html.erb
+++ b/app/views/devise/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar-markco">
-	<div class="navleft"><div class="avatar" id="avatar" style="background-image: url('/<%= current_user.id.to_s %>.png')"></div></div>
+	<div class="navleft"><div class="avatar" id="avatar" style="background-image: url('<%= @user.icon %>')"></div></div>
 	<div class="navmiddle"><div class="iconlogo"></div></div>
 	<div class="navright"><div class="hamburger glyphicon glyphicon-menu-hamburger" id="dropdownbutton"></div></div>
 </div>
