background color white on avatar

--- a/app/assets/stylesheets/welcome.css.erb
+++ b/app/assets/stylesheets/welcome.css.erb
@@ -1,5 +1,6 @@
 #avatar {
     /* background-image: image-url("/29.png"); */
+    background-color: white;
     background-size: contain;
     background-repeat: no-repeat;    
     border: 3px solid white;
