--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -84,6 +84,89 @@
 }
 
 
+/* The Modal (background) */
+.modal3 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content3 {
+    position: relative;
+    background-color: #c52b25;
+    margin: 15% auto; /* 45% from the top and centered */
+    border: 1px solid #888;
+    border-radius: 15px;
+    width: 90%; /* Could be more or less, depending on screen size */
+    font-size: 0.9em;
+    text-align: center;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatebottom;
+    animation-duration: 0.4s;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatebottom {
+    from {top: 35%; opacity: 0} 
+    to {top: 0; opacity: 1}
+}
+
+@keyframes animatebottom {
+    from {top: 35%; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+.croplabel {
+    color: white;
+    font-size: 1.5em;
+}
+
+.croppie-container {
+    padding: 1vh;
+    padding-top: 5vh;
+}
+
+
+.savebutton {
+    color: white;
+    background-color: #b40700; 
+    text-align: center;
+    width: 20vh;
+    font-size: 1em;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding-top: 0.8vh;
+    padding-bottom: 0.8vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3vh;
+}
+
+.savebutton a {
+    text-decoration: none;
+    color: white;
+}
+
+.savebutton:hover, .savebutton a:hover {
+    color: white;
+    background-color: rgba(197, 43, 37, 0.75);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
 /* The Close Button */
 .close {
     color: #aaa;
@@ -95,8 +178,18 @@
     margin-right: -10px;
 }
 
+.close3 {
+    color: #aaa;
+    float: right;
+    font-family: sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: -6vh;
+    margin-right: 6px;
+}
+
 .close:hover,
-.close:focus {
+.close:focus, .close3:hover, .close3:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
