--- a/app/views/devise/shared/_navbar.html.erb
+++ b/app/views/devise/shared/_navbar.html.erb
@@ -47,6 +47,7 @@
 
 
 <script>
+	console.log('<%= @user.icon.url %>')
 	var trackingToggleOn = document.getElementById("trackingtoggleon");
 	var trackingToggleOff = document.getElementById("trackingtoggleoff");
 
